# xmlgenerator

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  question.md  rng2xsd.py  xsd2xml.py
.github/workflows/: ci.yml  test-python.yml  test-rust.yml
examples/: complex_in_complex2.xsd  recursive.xsd  separate_types.xsd  simple.xsd  simple_refs.xsd  simple_refs2.xsd
examples/rng/: complex_in_complex.rng  complex_in_complex_no_ref.rng  example.rng  simple.rng  simple_refs.rng
examples/working/: complex_in_complex.xsd  complex_in_complex_norefs.xsd
examples/xsd/: complex_in_complex.xsd  complex_in_complex2.xsd  complex_in_complex_norefs.xsd  simple.xsd  simple_refs.xsd  simple_refs2.xsd
invalid/: two_roots.xsd
py_xml_generator/: Cargo.toml  build.sh  pyproject.toml
py_xml_generator/src/: lib.rs
py_xml_generator/tests/: test_generator.py  test_inputs.py
src/: lib.rs
tests/: test_examples.rs  test_invalid.rs  test_xml.rs  xml_tests.rs  xsd_test.py
xml_generator/: Cargo.toml
xml_generator/src/: attribute.rs  attribute_generator.rs  element_generator.rs  error.rs  fetch_elements.rs  fetch_types.rs  find_root.rs  generate.rs  generate_output.rs  generate_schema.rs  group.rs  group_generator.rs  lib.rs  restriction.rs  restriction_generator.rs  type_generator.rs
xml_generator/tests/: test_generator.rs
xmlgenerator/: __init__.py  xsd2xml.py
xmlgenerator/examples/: simple_refs.xsd
xmlgenerator/src/: lib.rs
xmlgenerator/tests/: test_xml.rs
