[workspace]
resolver = "2"
members = [
    "xmlgenerator"
]
default-members = [
    "xmlgenerator"
]

[workspace.package]
version = "0.1.0"
authors = ["Z M Williams <z.m.will@icloud.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/zwill22/xmlgenerator"

[workspace.dependencies]
xmlgenerator = { version = "0.1.0", path = "xmlgenerator" }
