[workspace]
resolver = "3"
members = [
    "xml_generator",
    "py_xml_generator"
]
default-members = [
    "xml_generator",
    "py_xml_generator"
]

[workspace.package]
version = "0.1.0"
authors = ["Z M Williams <z.m.will@icloud.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/zwill22/xmlgenerator"

[workspace.dependencies]
xmlgenerator = { version = "0.1.0", path = "xml_generator" }
pyxmlgenerator = { version = "0.1.0", path = "py_xml_generator" }
